objects/Cobalt_Opportunity_History__c.object
<CustomObject>
    <description>Used by CB Services/Sales to track legacy Opportunity history from Cobalt Advantage SF instance</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt Consolidation ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <label>ExpectedRevenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <label>ForecastCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <label>OpportunityId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cobalt Opportunity History</relationshipLabel>
        <relationshipName>Cobalt_Opportunity_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <label>StageName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opportunity History</label>
    <nameField>
        <displayFormat>O-{000000000}</displayFormat>
        <label>Cobalt Opportunity History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>